<resources>
    <string name="app_name">Listas de Compras</string>
    <string name="list_name">Nome da lista</string>
    <string name="txt_list_name">LIST_NAME</string>
    <string name="entrarLista">Entrar na Lista</string>
    <string name="removerLista">Remover Lista</string>
    <string name="item_name">Nome</string>
    <string name="suasListas">Listas</string>
    <string name="amount">QTD</string>
    <string name="price">Preço</string>
    <string name="iGet">Peguei</string>
    <string name="delete">Excluir</string>
    <string name="add_item">Adicionar item</string>
    <string name="amount1">Quantidade</string>
    <string name="cartprice">Seu carrinho custa:</string>
    <string name="create">Criar</string>
    <string name="confirm">Confirmar</string>
    <string name="nothing">Nenhuma lista encontrada.</string>
    <string name="organize_title">Organize</string>
    <string name="organize_description">Organize suas compras, marcando produtos que já está no seu carrinho.</string>
    <string name="controle_title">Controle</string>
    <string name="controle_description">Tenha mais controle de suas compras, como quantidade e valor que está pagando em cada produto.</string>
    <string name="surprise_title">Sem surpresas</string>
    <string name="surprise_description">Evite surpresas na hora de pagar com o cálculo em tempo real do seu carrinho.</string>
    <string name="avant">Continuar</string>
    <string name="swipe_title">Arraste para excluir</string>
    <string name="swipe_description">Arraste para os lados para excluir listas e produtos.</string>
</resources>