<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:background="@drawable/dialog_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_dialog_add"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"/>

    <EditText
        android:id="@+id/txt_amount"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount1"/>

    <EditText
        android:id="@+id/txt_price"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/price"/>

    <Button
        android:id="@+id/btn_dialog_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"/>

</LinearLayout>