<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_confirm_amount"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount1"/>

    <EditText
        android:id="@+id/txt_confirm_price"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/price"/>

    <Button
        android:id="@+id/btn_confirm_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"/>

</LinearLayout>