<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_marginHorizontal="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:id="@+id/table_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow >

            <TextView
                android:maxLength="8"
                android:id="@+id/item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:hint="@string/item_name"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:maxLength="5"
                android:id="@+id/txt_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:hint="@string/amount"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:maxLength="5"
                android:id="@+id/txt_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:hint="@string/price"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
